# actual_portfolio

./: README.md  SQLModel_entity_example.py  api_lib_example.py  dag_example.py  docker-compose.yaml  huntflow_integration.py  s3_xcom_bcknd_example.py  sql_template_example.sql
BI_analytical_platform_bachelor_FYP_CS/: README.md
BI_analytical_platform_bachelor_FYP_CS/streamlit/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  streamlit_app.py
BI_analytical_platform_bachelor_FYP_CS/streamlit/airflow/dags/: load_data_db.py  load_lit_view_to_minio.py  load_marts.py  load_prod.py  load_staging.py
BI_analytical_platform_bachelor_FYP_CS/streamlit/lib/: date_filters.py  minio_client.py  plots_page_renders.py
BI_analytical_platform_bachelor_FYP_CS/streamlit/pages/: auth_guard.py  auth_page.py  configurator_page.py  plots_page.py
BI_analytical_platform_bachelor_FYP_CS/streamlit/sql_templates/: dim_campaigns_load.sql  dim_categories_load.sql  dim_payment_methods_load.sql  dim_products_load.sql  dim_regions_load.sql  dim_stores_load.sql  fact_advertising_campaigns_load.sql  fact_marketplace_sales_load.sql  fact_retail_sales_load.sql  mart_campaign_effectiveness.sql  mart_inventory_vs_demand.sql  mart_sales_by_category_region.sql  mart_sales_overview.sql  staging_advertising.sql  staging_marketplace.sql  staging_retail.sql
